packages/webassemblyjs/test/fixtures/type-errors/nop/module.wast
(module (func (result f64) (f64.const 0) (nop) (nop) (drop)))
